Implement an endpoint to update room
