# service/src/main/java/br/com/sw2u/realmeet/domain/repository/RoomRepository.java
@@ -1,7 +1,9 @@
 package br.com.sw2u.realmeet.domain.repository;
 
 import br.com.sw2u.realmeet.domain.entity.Room;
+
 import java.util.Optional;
+
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Modifying;
 import org.springframework.data.jpa.repository.Query;
@@ -17,4 +19,8 @@ public interface RoomRepository extends JpaRepository<Room, Long> {
     @Modifying(clearAutomatically = true, flushAutomatically = true)
     @Query("UPDATE Room r SET r.active = false WHERE r.id = :roomId")
     void disable(@Param("roomId") Long id);
+
+    @Modifying(clearAutomatically = true, flushAutomatically = true)
+    @Query("UPDATE Room r SET r.name = :name, r.seats = :seats WHERE r.id = :roomId")
+    void updateRoom(@Param("roomId") Long id, @Param("name") String name, @Param("seats") Integer seats);
 }
